--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
     "expo": "~51.0.14",
+    "expo-device": "^6.0.2",
     "expo-document-picker": "^12.0.2",
     "expo-font": "~12.0.7",
     "expo-image-picker": "^15.0.5",
     "expo-linear-gradient": "^13.0.2",
     "expo-location": "^17.0.1",
+    "expo-notifications": "^0.28.9",
     "expo-status-bar": "~1.12.1",
+    "mime": "^4.0.3",
     "react": "18.2.0",
     "react-i18next": "^14.1.2",
     "react-native": "^0.74.2",
