--- a/package.json
+++ b/package.json
@@ -4,41 +4,43 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
-    "expo": "~51.0.14",
-    "expo-device": "^6.0.2",
-    "expo-document-picker": "^12.0.2",
-    "expo-font": "~12.0.7",
-    "expo-image-picker": "^15.0.5",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-location": "^17.0.1",
-    "expo-notifications": "^0.28.9",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~52.0.46",
+    "expo-device": "~7.0.3",
+    "expo-document-picker": "~13.0.3",
+    "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-location": "~18.0.10",
+    "expo-notifications": "^0.29.14",
+    "expo-status-bar": "~2.0.1",
     "mime": "^4.0.3",
-    "react": "18.2.0",
+    "react": "^18.3.1",
     "react-i18next": "^14.1.2",
-    "react-native": "^0.74.2",
-    "react-native-gesture-handler": "^2.16.2",
-    "react-native-maps": "^1.14.0",
+    "react-native": "^0.76.9",
+    "react-native-confirmation-code-field": "^7.4.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-maps": "^1.18.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-mask-input": "^1.2.3",
     "react-native-phone-call": "^1.2.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-size-matters": "^0.4.2",
-    "react-native-svg": "^15.2.0",
-    "react-native-webview": "^13.10.4",
-    "react-native-youtube-iframe": "^2.3.0"
+    "react-native-svg": "^15.8.0",
+    "react-native-webview": "^13.12.5",
+    "react-native-youtube-iframe": "^2.3.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
